# EarthGL

./: .gitignore  .gitmodules  CMakeLists.txt  EarthGL.sln  EarthGL.vcxproj  EarthGL.vcxproj.filters  README.md  premake5.lua
EarthGL/: EarthGL.vcxproj  EarthGL.vcxproj.filters
EarthGL/Shader/: default-fragment.glsl  default-vertex.glsl
EarthGL/Shaders/: TriangleVertex.glsl
EarthGL/Source/: Debug.cpp  Debug.hpp  Graphics.cpp  Graphics.hpp  Main.cpp  Window.cpp  Window.hpp
Shaders/: TriangleFragment.glsl  TriangleVertex.glsl
Source/: Main.cpp  glad.c
data/shader/: lit.glsl
include/: application.hpp  game.hpp  graphics.hpp  input.hpp  pch.hpp  renderer.hpp  texture.hpp  timer.hpp  window.hpp
resource/shader/: lit.glsl
source/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  Game.cpp  Game.hpp  Graphics.cpp  Graphics.hpp  Input.cpp  Input.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  PCH.hpp  Primitive.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  Timer.cpp  Types.cpp  Types.hpp  Window.cpp  Window.hpp  application.cpp  camera.cpp  debug.cpp  game.cpp  graphics.cpp  input.cpp  main.cpp  mesh.cpp  renderer.cpp  texture.cpp  timer.cpp  types.cpp  window.cpp
x64/Debug/: EarthGL.exe.recipe  EarthGL.ilk  vc142.idb
x64/Debug/EarthGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EarthGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
